<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context=".floating.DifficultySelectActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="20dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/difficulty_instruction" />

    <Button
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diff_easy"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="309dp" />

    <Button
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diff_medium" />

    <Button
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diff_hard" />


</LinearLayout>