<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".gamesleep.GameSleepActivity">


    <ImageView
        android:id="@+id/gameSleepBG"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gamesleep" />


    <TextView
        android:id="@+id/levelOneCountDown"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:gravity="bottom|center"
        android:text="@string/_00_15"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/character1"
        android:layout_width="343dp"
        android:layout_height="405dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/gameSleepBG"
        app:layout_constraintTop_toTopOf="@+id/gameSleepBG"
        app:srcCompat="@drawable/character_male_1" />

    <ImageView
        android:id="@+id/character2"
        android:layout_width="343dp"
        android:layout_height="405dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/gameSleepBG"
        app:layout_constraintTop_toTopOf="@+id/gameSleepBG"
        app:srcCompat="@drawable/character_male_2" />

    <ImageView
        android:id="@+id/character3"
        android:layout_width="343dp"
        android:layout_height="405dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/gameSleepBG"
        app:layout_constraintTop_toTopOf="@+id/gameSleepBG"
        app:srcCompat="@drawable/character_male_3" />

    <ImageView
        android:id="@+id/character4"
        android:layout_width="343dp"
        android:layout_height="405dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="@+id/gameSleepBG"
        app:layout_constraintTop_toTopOf="@+id/gameSleepBG"
        app:srcCompat="@drawable/character_male_4" />

    <ImageView
        android:id="@+id/blanket"
        android:layout_width="350dp"
        android:layout_height="512dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/blanket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blanket" />


    <ImageView
        android:id="@+id/characterSit"
        android:layout_width="362dp"
        android:layout_height="426dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/todo"
        android:rotation="-90"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/gameSleepBG"
        app:layout_constraintTop_toTopOf="@+id/gameSleepBG"
        app:srcCompat="@drawable/xiaomingsit" />

    <Button
        android:id="@+id/btnAlarm"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="488dp"
        android:width="200dp"
        android:background="@drawable/btn_alarm_custom"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>